add initial parse mechanism

--- a/index.html
+++ b/index.html
@@ -11,4 +11,13 @@
   <div id="app-content"></div>
   <script src="app.js"></script>
 </body>
+
+<script type="text/javascript">
+    document.onload = function () {
+        DataManager.getData(function() {
+
+        });
+    }
+</script>
+
 </html>
