parse mechanism update

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         DataManager.getData(function() {
 
         });
+        var d = new Dropdown(0, document.querySelector('#app-content'), function (level, item) {console.log(level, item);});
+        d.render([{id:1, name: '1'}, {id:2, name: '2'}]);
+        d.render([{id:4, name: '4'}, {id:3, name: '3'}]);
+        console.log(d);
     }
 </script>
 
