--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <script type="text/javascript">
     document.onload = function () {
-        DataManager.init()
+//        DataManager.init()
     }
 </script>
 
