--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  
+    <meta charset="utf-8">
 
+    <style type="text/css">
+        select {
+            display: block;
+            margin-bottom: 25px;
+        }
+    </style>
 </head>
 
 <body>
-  <div id="app-content"></div>
-  <script src="js/item-tree.js"></script>
-  <script src="data.js"></script>
-  <script src="app.js"></script>
+    <div id="app-content"></div>
+    <script src="js/item-tree.js"></script>
+    <script src="data.js"></script>
+    <script src="js/dropdown.js"></script>
 </body>
 
 <script type="text/javascript">
